2005-10-30  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/AbstractDocument.java (dump): Actually throw
	AssertionError when constructed.
	* javax/swing/text/DefaultFormatter.java (checkValidInput): Add cause
	to AssertionError.
	* javax/swing/text/DefaultStyledDocument.java (insertUpdate):
	Likewise.
	* javax/swing/text/GlyphView.java (getPartialSpan): Likewise.
	(getText): Likewise.
	* javax/swing/text/PlainView.java (determineMaxLineLength): Likewise.
	(updateDamage): Likewise.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/java/rmi/server/UnicastServer.java (refcache): Make it a
	synchronized IdentityHashMap.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java
	(GdkGraphics2D(GdkGraphics2D,int, int, int,int)): New constructor.
	(create(int,int,int,int)): Use new constructor.
	(copyArea): Implement through create() and gdkDrawDrawable().

2005-10-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* java/nio/channels/spi/AbstractSelectableChannel.java
	(register): Throw IllegalBlockingModeException if the channel is
	not in blocking mode. 
	
2005-10-29  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ButtonDemo.java
	(ButtonDemo): add closePanel after content is created,
	(createContent): don't add closePanel here,
	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java
	(ButtonDemo): add closePanel after content is created,
	(createContent): don't add closePanel here,
	* examples/gnu/classpath/examples/swing/ScrollBarDemo.java
	(ButtonDemo): add closePanel after content is created,
	(createContent): don't add closePanel here,
	* examples/gnu/classpath/examples/swing/SliderDemo.java
	(ButtonDemo): add closePanel after content is created,
	(createContent): add separate checkBoxPanel but don't add closePanel 
	here.

2005-10-28  Roman Kennke  <kennke@aicas.com>

	* java/awt/KeyboardFocusManager.java
	(setCurrentKeyboardFocusManager): Create a DefaultKeyboardFocusManager